--- a/app/Resources/views/critical_achievement/index.html.twig
+++ b/app/Resources/views/critical_achievement/index.html.twig
@@ -2,56 +2,66 @@
 {% set h1 = 'Liste des acquis critiques' %}
 {% block subContent %}
 
-    <div class="card-header">
-        {{ form_start(form) }}
-        <div class="row ui-front">
-            <div class="col-md-2">
-                {{ form_row(form.label) }}
+    <div class="card">
+
+        <div class="card-body">
+
+            <div class="d-flex justify-content-end pb-3">
+                {% include 'action/_critical_achievement_create.html.twig' %}
             </div>
-            <div class="col-md-3 col-sm-6">
-                <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.achievement_index')  }}">Réinitialiser les filtres</a>
+
+            <div class="border p-3 mb-3">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        {{ form_row(form.label) }}
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Filtrer</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.critical_achievement.index')  }}">Réinitialiser les filtres</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{ form_end(form) }}
             </div>
-            <div class="offset-md-4"></div>
-            <div class="col-md-3 col-sm-6 text-right">
-                <a class="btn btn-primary float-right" style="margin-top: 32px"
-                   href="{{ path('app_admin.achievement_new') }}">Ajouter un acquis critique</a>
-            </div>
-        </div>
-        <input type="submit" style="position: absolute; left: -9999px"/>
-        {{ form_end(form) }}
-    </div>
-    <div class="card-body">
-        {% if pagination.totalItemCount > 0 %}
-            <table class="table table-bordered table-responsive-sm">
-                <thead>
-                <tr>
-                    <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'ca.label') }}</th>
-                    <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'ca.obsolete') }}</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for critical in pagination %}
+
+            {% if pagination.totalItemCount > 0 %}
+                <table class="table table-bordered table-responsive-sm">
+                    <thead>
                     <tr>
-                        <td>
-                            <a href="{{ path('app_admin.achievement_edit', { 'id' : critical.id }) }}">{{ critical.label }}</a>
-                        </td>
-                        <td>
-                            {{ critical.obsolete|humanizeBoolean }}
-                        </td>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'ca.label') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'ca.obsolete') }}</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            <div class="alert alert-info">Aucun acquis critique n'a été trouvé avec ces critères</div>
-        {% endif %}
-    </div>
-    <!-- /.card-body -->
-    {% if knp_pagination_render(pagination) %}
-        <div class="card-footer clearfix">
-            {{ knp_pagination_render(pagination) }}
+                    </thead>
+                    <tbody>
+                    {% for critical in pagination %}
+                        <tr>
+                            <td>
+                                {% if is_granted('ROLE_ADMIN_CRITICAL_ACHIEVEMENT_UPDATE') %}
+                                    <a href="{{ path('app.admin.critical_achievement.edit', { 'id' : critical.id }) }}">{{ critical.label }}</a>
+                                {% else %}
+                                    {{ critical.label }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {{ critical.obsolete|humanizeBoolean }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                {% include 'partial/_no_element.html.twig' %}
+            {% endif %}
         </div>
-    {% endif %}
+        <!-- /.card-body -->
+        {% if knp_pagination_render(pagination) %}
+            <div class="card-footer clearfix">
+                {{ knp_pagination_render(pagination) }}
+            </div>
+        {% endif %}
     </div>
 
 {% endblock %}
