--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -39,7 +39,7 @@
 
         {% set referentielLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.','app.admin.year.',
             'app.admin.equipment', 'app.admin.structure.', 'app.admin.domain.', 'app.admin.period.index', 'app.admin.language.',
-            'app.admin.campus.', 'app_admin.achievement'] %}
+            'app.admin.campus.', 'app.admin.critical_achievement.'] %}
         {% if is_granted(['ROLE_ADMIN_ACTIVITY', 'ROLE_ADMIN_ACTIVITYTYPE', 'ROLE_ADMIN_ACTIVITYMODE', 'ROLE_ADMIN_CAMPUS',
             'ROLE_ADMIN_DOMAIN', 'ROLE_ADMIN_EQUIPMENT', 'ROLE_ADMIN_LANGUAGE', 'ROLE_ADMIN_PERIOD', 'ROLE_ADMIN_STRUCTURE'
         ]) %}
@@ -55,8 +55,8 @@
                     style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
 
                     <li class="nav-item pl-2">
-                        <a href="{{ path('app_admin.achievement_index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app_admin.achievement']) }}">
+                        <a href="{{ path('app.admin.critical_achievement.index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.critical_achievement']) }}">
                             <i class="fas fa-map-marker-alt nav-icon"></i>
                             <p>
                                 Acquis critiques
